    completely broke printing with e. g. HPJetDirect. Thanks to
    Samuel Thibault for the patch! (Closes: #489045)
  * debian/cups-bsd.postinst: Assume default printcap path (in /var/run/cups/)
    if not specified in cupsd.conf. This brings back the lost /etc/printcap
    for legacy applications. (Closes: #482186, LP: #282667)

 -- Martin Pitt <mpitt@debian.org>  Sun, 16 Nov 2008 16:20:19 +0100

cups (1.3.9-4) experimental; urgency=low

  [ Till Kamppeter ]
  * debian/local/filters/pdf-filters/conf/pdftoraster.convs,
    debian/local/filters/pdf-filters/filter/pdftoraster.cxx,
    debian/local/filters/pdf-filters/README,
    debian/local/filters/pdf-filters/addtocups,
    debian/local/filters/pdf-filters/removefromcups, debian/rules, 
    debian/copyright: Removed Poppler-based pdftoraster filter. It will be 
    replaced by a Ghostscript-based pdftoraster filter filter provided by the
    Ghostscript package, requested via Debian bug #505282 (fixes LP: #290395).

  * debian/filters/pstopdf: Fixed debug output.

 -- Till Kamppeter <till.kamppeter@gmail.com>  Tue, 11 Nov 2008 13:46:55 +0100

cups (1.3.9-3) experimental; urgency=low

  [ Till Kamppeter ]
  * debian/filters/pstopdf: Fixed several bugs in the pstopdf filter. First,
    removed the use of CUPS' pstops filter for inserting option settings. This
    also inserts PJL headers and then Ghostscript cannot convert the PostScript
    to PDF in the next step. Fixed also the sed magic so that the paper size
    and the margins get really read from the PPD and fixed the calculation of
    the top and bottom margins, they were exchanged. Fixes LP: #289759,
    LP: #292690, LP: #282186. Possible fix for LP #293883.

  [ Martin Pitt ]
  * debian/local/apparmor-profile: Allow dnssd backend to create various less
    common network protocols (x25, appletalk, etc.) for detection. Also allow
    it to read /proc/*/net/, which the bonjour avahi library apparently uses.
    (LP: #254022)
