@@ -9,8 +9,10 @@ cups (1.3.9-5) UNRELEASED; urgency=low
   * debian/cups-bsd.postinst: Assume default printcap path (in /var/run/cups/)
     if not specified in cupsd.conf. This brings back the lost /etc/printcap
     for legacy applications. (Closes: #482186, LP: #282667)
+  * debian/rules: Drop arm/armel -f-no-stack-protector workaround, since SSP
+    works on these architectures now. (See #469517)
 
- -- Martin Pitt <mpitt@debian.org>  Sun, 16 Nov 2008 16:20:19 +0100
+ -- Martin Pitt <mpitt@debian.org>  Sun, 16 Nov 2008 16:35:16 +0100
 
 cups (1.3.9-4) experimental; urgency=low
 
